k8s/flux/cluster/apps/security/vault/app/tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-tailscale-ingress
  namespace: vault
spec:
  ingressClassName: tailscale
  rules:
    - 
      host: &host vault-homelab.taildd1ad.ts.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: &svc vault-ui
                port:
                  number: &port 8200
  defaultBackend:
    service:
      name: *svc
      port:
        number: *port
  tls:
    - hosts:
        - *host
